--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,4 +19,7 @@
         "black"
     ],
     "editor.detectIndentation": false,
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
 }
